--- a/views/product.html
+++ b/views/product.html
@@ -5,39 +5,40 @@
 {% endblock %}
 
 {% block content %}
-	<div class="breadcrumb"><span>Home <i class="icon-angle-right"></i> Girls <i class="icon-angle-right">
-	</i> Sleepware <i class="icon-angle-right"></i> Old Wise Owl</span></div>
+	<div class="breadcrumb"><span>Home <i class="icon-angle-right"></i> Product Detail</div>
 	<div class="left-column">
-		<div class="big-product-image"></div>
+		<div class="big-product-image" style="background-image:url({{ product.images[0] }})"></div>
 		<div class="product-colors">
-			<a href=""><span class="swatch-text">Monkeys Bannas</span><span class="swatch-color-first"></span></a>
-			<a href=""><span class="swatch-text">Snowflakes Blue</span><span class="swatch-color-second"></span></a>
-			<a href=""><span class="swatch-text">Snowman</span><span class="swatch-color-third"></span></a>
+			{% for color in product.colors %}	
+				<a href="{{ color.productURL }}"><span class="swatch-text">{{ color.colorName }}</span><span class="swatch-color" style="background-color:{{ color.colorValue }};background-image:url('{{ color.imageSwatchUrl }}')"></span></a>
+			{% endfor %}
 		</div>
 	</div>
 	<div class="right-column">
 		<div class="product-name">
-			<span>OLD WISE OWL</span>
+			<span>{{ product.productName }}</span>
 		</div>
 		<div class="line-break"></div>
 		<div class="product-price">
-			<span>$35.00</span>
+			{% if isSale %}
+				<span class="slash">${{ msrp.toFixed(2) }}</span>
+			{% endif %}
+			<span>${{ unitPrice.toFixed(2) }}</span>
 		</div>
 		<div class="select-pattern">
 			<select class="pattern-dropdown">
 			  	<option value="">Select Pattern</option>
-			  	<option value="">Monkeys Bannas</option>
-			  	<option value="">Snowflakes Blue</option>
-				<option value="">Snowman</option>
+			  	{% for color in product.colors %}
+				<option value="{{ color.productNumber }}">{{ color.colorName }}</option>
+				{% endfor %}
 			</select>
 		</div>
 		<div class="select-size">
 			<select class="size-dropdown">
 			  	<option value="">Select Size</option>
-			  	<option value="">1</option>
-			  	<option value="">2</option>
-				<option value="">3</option>
-				<option value="">4</option>
+			  	{% for size in product.sizes %}
+				<option value="{{ size.sku }}">{{ size.sizeName }}</option>
+				{% endfor %}
 			</select>
 		</div>
 		<div class="product-next">
@@ -49,15 +50,16 @@
 			<a href=""><span class="click-add-to-cart">ADD TO CART</span></a>
 		</div>
 		<div class="product-code">
-			<span>Product Code: product 11</span>
+			<span>Product Code: {{ product.productNumber }}</span>
 		</div>
-		<div class="product-availability"><span>Availability: In Stock</span></div>
+		<div class="product-availability"><span>
+			{% if inStock %}
+			Availability: In Stock
+			{% else %}
+			Availability: Out of Stock
+			{% endif %}</span></div>
 		<div class="second-line-break"></div>
-		<div class="product-description"><span>rat volutpat. Ut wisi enim ad minim veniam, 
-			quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea 
-			commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate 
-			velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros 
-			et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue </span>
+		<div class="product-description"><span>{{ product.descriptions[0] }}</span>
 		</div>
 	</div>
 {% endblock %}
