--- a/views/catalog.html
+++ b/views/catalog.html
@@ -11,7 +11,8 @@
 		<ul class="nav-list">
 			<li><a href="">GIRLS</a></li>
 			<li><a href="">BOYS</a></li>
-			<li><a href="" class="fuzzy">FUZZY FLEECE</a></li>
+			<li><a href="">Up Past 8</a></li>
+			<li><a href="">FUZZY FLEECE</a></li>
 			<li><a href="">SALE</a></li>
 		</ul>
 	</div>
