--- a/public/css/quickview.css
+++ b/public/css/quickview.css
@@ -41,11 +41,16 @@
 	position:relative;
 	display:block;
 	padding-left:68px;
+	margin-top:20px;
 }
 .quick-view-modal .product-colors  a {
 	display:inline-block;
 	margin-right:10px;
-	margin-top:20px;
+	margin-bottom:10px;
+	background-color:#ccc;
+	overflow:hidden;
+	width:50px;
+	height:50px;
 }
 .quick-view-modal .swatch-text {
 	display:block;
