--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -8,7 +8,9 @@
 		<div class="left-column">
 		<div class="big-product-image" style="background-image:url('{{ images[0] }}')"></div>
 		<div class="product-colors">
-
+			{% for color in colors %}	
+				<a href="{{ color.productURL }}"><span class="swatch-text">{{ color.colorName }}</span><span class="swatch-color" style="background-color:{{ color.colorValue }};background-image:url('{{ color.imageSwatchUrl }}')"></span></a>
+			{% endfor %}
 		</div>
 		</div>
 		<div class="right-column">
@@ -18,9 +20,9 @@
 		<div class="line-break"></div>
 		<div class="product-price">
 			{% if isSale %}
-				<span class="slash">${{ msrp }}</span>
+				<span class="slash">${{ msrp.toFixed(2) }}</span>
 			{% endif %}
-			<span>${{ unitPrice }}</span>
+			<span>${{ unitPrice.toFixed(2) }}</span>
 		</div>
 		<div class="select-pattern">
 			<select class="pattern-dropdown">
@@ -40,7 +42,7 @@
 		</div>
 		<div class="product-next">
 			<a id="product-decrement" href=""><span class="minus-product">-</span></a>
-			<a id="product-equal" href=""><span class="equal-product">0</span></a>
+			<a id="product-equal" href=""><span class="equal-product">1</span></a>
 			<a id="product-increment" href=""><span class="add-product">+</span></a>
 		</div>
 		<div class="product-add-to-cart">
@@ -53,7 +55,6 @@
 		<div class="second-line-break"></div>
 		<div class="product-description">{{ descriptions[0] }}</div>
 		</div>
-		<!-- end of content -->
     </div>
   </div>
 </div>
