updates with kitgui and pathing

--- a/views/contactus.html
+++ b/views/contactus.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-	<h1>{{title}}</h1>
-	<p>hello</p>
+	<h1 class="{{ kitgui.contactustitle.classNames }}">{{ kitgui.contactustitle.content }}</h1>
+	<p class="{{ kitgui.contactuswording.classNames }}">{{ kitgui.contactuswording.content }}</p>
 {% endblock %}
 
 {% block foot %}
