--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-		<div class="top-banner {{ kitgui.items.homeslider.classNames }}">{{ kitgui.items.homeslider.content | safe }}</div>
+		<div class="top-banner {{ kitgui.homeslider.classNames }}">{{ kitgui.homeslider.content | safe }}</div>
 		<div class="products">
 			<div class="title">
 				<span>NEW ITEMS</span>
