--- a/views/catalog.html
+++ b/views/catalog.html
@@ -1,11 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block head %}
-  <link rel="stylesheet" href="/css/catalog.css">
+	<link rel="stylesheet" href="/css/pages/catalog.css">
 {% endblock %}
 
 {% block content %}
-	<div class="breadcrumb"><span>Home > Girls</span></div>
 	<div class="left-column-catalog">
 		<a href="" class="departments"><span>DEPARTMENTS</span></a>
 		<ul class="nav-list">
