--- a/public/css/pages/index.css
+++ b/public/css/pages/index.css
@@ -2,23 +2,16 @@
 	display:block;
 	margin:0 auto;
 	background-color:#fff;
-	background-image:url(/img/bannersample.png);
 	width:799px;
 	height:423px;
 	margin-bottom:20px;
 }
 .middle .products {
-	display:block;
-	position:relative;
-	width:799px;
-	min-height:412px;
 	background-color:#fff;
-	margin:0 auto;
+	padding:20px;
 }
 .middle .title {
-	position:absolute;
-	left:37px;
-	top:18px;
+
 }
 .middle .title span {
 	font-weight:400;
@@ -26,20 +19,23 @@
 	color:#000;
 }
 .middle .productsbar {
-	position:absolute;
-	background-image:url(/img/products-bar.png);
-	height:31px;
-	width:751px;
-	bottom:10px;
-	left:24px;
 	text-align:center;
+	display:block;
+	background-color:#0098ce;
+	color:#fff;
+	vertical-align:middle;
+	margin-top:10px;
+	padding:5px 0;
+	text-decoration:none;
 }
 .middle .productsbar span {
 	position:relative;
-	top:3px;
 	color:#fff;
 	font-weight:400;
 	vertical-align:middle;
+	top:-2px;
+	display:inline-block;
+	margin-right:4px;
 }
 .middle .featured-products {
 	font-size:0;
@@ -47,7 +43,7 @@
 	vertical-align:top;
 }
 .middle .product-container {
-	margin-top:60px;
+	margin-top:20px;
 	margin-left:5px;
 	vertical-align:top;	
 	display:inline-block;
@@ -90,16 +86,18 @@
 	height:230px;
 	font-size:13px;
 	background-color:#fff;
+	overflow:hidden;
 }
 .middle .product-container:hover .product a {
 	border:1px solid #0098ce;
+	width:166px;
 }
 .middle .product-container:hover .text-container {
 	background-color:#0098ce;
 }
 .middle .product img {
-	width:166px;
-	height:170px;
+	max-width:166px;
+	height:auto;
 	display:block;
 }
 .middle .product .productName {
@@ -143,7 +141,7 @@
 	color:#fff;
 	text-align:center;
 }
-.icon-shopping-cart {
+.fa-shopping-cart {
 	color:#fff;
 	padding-right:5px;
 }
