--- a/views/layout.html
+++ b/views/layout.html
@@ -6,9 +6,8 @@
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css" rel="stylesheet">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 		<script type="text/javascript" src="//use.typekit.net/ody1owy.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <link href="/css/main.css" rel="stylesheet">
@@ -31,29 +30,29 @@
 					<li><a href="/sign-in" rel="nofollow">sign in</a></li>
 				</ul>
 				<ul class="productsnav">
-					<li><a href="">home</a></li>
+					<li><a href="/">home</a></li>
 					<li><a href="/pjs-for-girls">pjs for girls</a></li>
 					<li><a href="/pjs-for-boys">pjs for boys</a></li>
 					<li><a href="/fuzzy-fleece">fuzzy fleece</a></li>
 					<li><a href="/sale">sale</a></li>
 				</ul>
 				<ul class="items">
-					<li><a href="">0 items</a></li>
+					<li data-quantity>0 items</li>
 					<li>|</li>
-					<li>0.00</li>
+					<li data-subtotal>0.00</li>
 				</ul>
 			</div>
 		</div>
 		<div class="middle full-width">
 			<div class="site-width">
 				{% if breadcrumb %}
-					<ul class="breadcrumb">
+					<ul class="sp-breadcrumb">
 					{% for item in breadcrumb %}
 						<li>
 						{% if item.link %}
 							<a href="{{ item.link }}">{{ item.label }}</a> <span>&gt;</span>
 						{% else %}
-							<span class="breadcrumb-label">{{ item.label }}</span>
+							<span class="sp-breadcrumb-label">{{ item.label }}</span>
 						{% endif %}
 						</li>
 					{% endfor %}
@@ -109,8 +108,22 @@
 	    		</div>
 			</div>
 		</div>
+		<div class="modal fade" data-cart-dialog role="dialog" tabindex="-1">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		        <h4 class="modal-title">Oops</h4>
+		      </div>
+		      <div class="modal-body">
+		        <p></p>
+		      </div>
+		      <div class="modal-footer"><button type="button" class="btn btn-primary" data-dismiss="modal">OK</button></div>
+		    </div>
+		  </div>
+		</div>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 		<script src="/js/plugins/swig.pack.min.js"></script>
 		<script src="//api.hubsoft.ws/js/api.js"></script>
 		<script src="/js/app.js"></script>
