--- a/views/partials/productColor.html
+++ b/views/partials/productColor.html
@@ -17,7 +17,7 @@
 		</a>
 	</div>
 	<div></div>
-	<button class="add-to-cart">
-		<span class="text-container"><i class="icon-shopping-cart"></i><span class="text">add to cart</span></span>
+	<button class="add-to-cart" data-add-to-cart data-sku="{{ colors[0].sizes[0].sku }}">
+		<span class="text-container"><i class="fa fa-shopping-cart"></i><span class="text">add to cart</span></span>
 	</button>
 </div>
