--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -1,4 +1,4 @@
-<div class="modal-dialog">
+<div class="modal-dialog" style="display:none">
   <div class="modal-content clearfix">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
