--- a/views/checkout.html
+++ b/views/checkout.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block content %}
-   <div class="container" id="cart-page">
+   <div id="cart-page" class="clearfix">
 	   <h1>Place Order</h1>
 	   <div class="cart-empty-message">
-	       Oops, your cart is empty.<br /><br /><a href="/shop">Continue to the shopping page.</a>
+	       Oops, your cart is empty.<br /><br /><a href="/">Continue to the shopping page.</a>
 	   </div>
-	   <div class="left">
+	   <div class="left clearfix">
 	       <div class="shipping-step step">
 	           <div class="compact">
 	               <div class="number"><span>1</span></div>
@@ -67,7 +67,7 @@
 	                       <input required type="text" class="entry postal-code" name="postalCode" />
 	                   </label>
 	                   <label>
-	                       <span class="col1">SHIPMENT METHOD *</span>
+	                       <span class="col1">SHIPPING *</span>
 	                       <select required name="shippingMethod" id="shippingMethod"></select>
 	                   </label>
 	                   <label>
@@ -347,12 +347,12 @@
 	       </div>
 	       <div class=""></div>
 	   </div>
-	   <div class="right">
+	   <div class="right clearfix">
 	       <div class="header main-header">
 	           <span>SUMMARY</span>
-	           <a href="./cart.htm" class="cart-edit">edit</a>
+	           <a href="/cart" class="cart-edit">edit</a>
 	       </div>
-	       <div class="inner">
+	       <div class="inner clearfix">
 	           <div class="sub-total">
 	               <div class="ec-label">SUBTOTAL</div>
 	               <div class="value"></div>
@@ -389,12 +389,122 @@
 	               great<a href="#" class="close"><i class="icon icon-remove"></i></a>
 	           </div>
 	       </div>
-	       <div style="clear:both;"></div>
 	   </div>
-	   <div style="clear:both;"></div>
    </div>
 {% endblock %}
 
 {% block foot %}
+<script id="country-template" type="text/html">
+<select name="country">
+    <option value="">SELECT</option>
+    <option value="US" selected>United States</option>
+</select>
+</script>
+<script type="text/html" id="canada-states-template">
+    <select name="state">
+        <option value="">SELECT</option>
+        <option value="AB">Alberta</option>
+        <option value="BC">British Columbia</option>
+        <option value="MB">Manitoba</option>
+        <option value="NU">Nunavut</option>
+        <option value="NB">New Brunswick</option>
+        <option value="NL">Newfoundland and Labrador</option>
+        <option value="NT">Northwest Territories</option>
+        <option value="NS">Nova Scotia</option>
+        <option value="ON">Ontario</option>
+        <option value="PE">Prince Edward Island</option>
+        <option value="QC">Quebec</option>
+        <option value="SK">Saskatchewan</option>
+        <option value="YT">Yukon</option>
+    </select>
+</script>
+<script type="text/html" id="usa-states-template">
+<select name="state">
+    <option value="">SELECT</option>
+    <option value="AL">Alabama</option>
+	<option value="AK">Alaska</option>
+	<option value="AZ">Arizona</option>
+	<option value="AR">Arkansas</option>
+	<option value="CA">California</option>
+	<option value="CO">Colorado</option>
+	<option value="CT">Connecticut</option>
+	<option value="DE">Delaware</option>
+	<option value="DC">Dist of Columbia</option>
+	<option value="FL">Florida</option>
+	<option value="GA">Georgia</option>
+	<option value="HI">Hawaii</option>
+	<option value="ID">Idaho</option>
+	<option value="IL">Illinois</option>
+	<option value="IN">Indiana</option>
+	<option value="IA">Iowa</option>
+	<option value="KS">Kansas</option>
+	<option value="KY">Kentucky</option>
+	<option value="LA">Louisiana</option>
+	<option value="ME">Maine</option>
+	<option value="MD">Maryland</option>
+	<option value="MA">Massachusetts</option>
+	<option value="MI">Michigan</option>
+	<option value="MN">Minnesota</option>
+	<option value="MS">Mississippi</option>
+	<option value="MO">Missouri</option>
+	<option value="MT">Montana</option>
+	<option value="NE">Nebraska</option>
+	<option value="NV">Nevada</option>
+	<option value="NH">New Hampshire</option>
+	<option value="NJ">New Jersey</option>
+	<option value="NM">New Mexico</option>
+	<option value="NY">New York</option>
+	<option value="NC">North Carolina</option>
+	<option value="ND">North Dakota</option>
+	<option value="OH">Ohio</option>
+	<option value="OK">Oklahoma</option>
+	<option value="OR">Oregon</option>
+	<option value="PA">Pennsylvania</option>
+	<option value="RI">Rhode Island</option>
+	<option value="SC">South Carolina</option>
+	<option value="SD">South Dakota</option>
+	<option value="TN">Tennessee</option>
+	<option value="TX">Texas</option>
+	<option value="UT">Utah</option>
+	<option value="VT">Vermont</option>
+	<option value="VA">Virginia</option>
+	<option value="WA">Washington</option>
+	<option value="WV">West Virginia</option>
+	<option value="WI">Wisconsin</option>
+	<option value="WY">Wyoming</option>
+    <option value="AS">American Samoa</option>
+    <option value="GU">Guam</option>
+    <option value="PR">Puerto Rico</option>
+    <option value="VI">Virgin Islands</option>
+    <option value="AA">Armed Forces Americas</option>
+    <option value="AE">Armed Forces Europe</option>
+    <option value="AP">Armed Forces Pacific</option>
+</select>
+</script>
+<script id="cart-item-template" type="text/html">
+    <div class="item">
+        <img class="thumb" />
+        <div class="name"></div>
+        <div class="attribute">
+            <span class="ec-label">SIZE:</span>
+            <span class="value size"></span>
+        </div>
+        <div class="attribute">
+            <span class="ec-label">COLOR:</span>
+            <span class="value color"></span>
+        </div>
+        <div class="attribute">
+            <span class="ec-label">QTY:</span>
+            <span class="value qty"></span>
+        </div>
+        <div class="total"></div>
+        <div style="clear:both"></div>
+    </div>
+</script>
+
+
+	<script src="/js/plugins/jquery.dumbfix.1.0.js"></script>
+	<script src="/js/plugins/jquery.dumbformstate.js"></script>
+	<script src="/js/plugins/jquery.dumbvalidation.js"></script>
 	<script src="/js/pages/checkout.js"></script>
 {% endblock %}
