--- a/views/product.html
+++ b/views/product.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block head %}
-    <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/css/pages/product.css">
 {% endblock %}
 
 {% block content %}
@@ -64,5 +64,5 @@
 {% endblock %}
 
 {% block foot %}
-	
+	<script src="/js/pages/product.js"></script>
 {% endblock %}
