--- a/views/layout.html
+++ b/views/layout.html
@@ -37,9 +37,9 @@
 					<li><a href="/sale">sale</a></li>
 				</ul>
 				<ul class="items">
-					<li data-quantity>0 items</li>
+					<li data-quantity><a href="/cart">0 items</a></li>
 					<li>|</li>
-					<li data-subtotal>0.00</li>
+					<li data-subtotal><a href="/cart">0.00</a></li>
 				</ul>
 			</div>
 		</div>
