--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,11 @@ body {
 	padding:0;
 	background-color:#f3f3f3;
 }
+.unselectable {
+	-webkit-user-select: none;      
+	-moz-user-select: none;
+	-ms-user-select: none;
+}
 .full-width {
 	position:relative;
 }
@@ -268,4 +273,11 @@ ul.sp-breadcrumb li {
 	display:inline-block;
 	padding:0;
 	margin:0;
+}
+[data-increment],[data-decrement] {
+	cursor:pointer;
+}
+i.fa-asterisk {
+	font-size:15px;
+	color:#f00;
 }
