--- a/public/css/quickview.css
+++ b/public/css/quickview.css
@@ -147,11 +147,15 @@
 	margin-top:10px;
 	padding-left:2px;
 }
+.quick-view-modal .product-add-to-cart:hover * {
+	text-decoration:none;
+}
 .quick-view-modal .click-add-to-cart {
 	display:block;
 	width:134px;
 	height:50px;
 	background-color:#0099cc;
+	text-decoration:none;
 }
 .quick-view-modal .product-add-to-cart a span {
 	color:#fff;
