--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -3,34 +3,34 @@
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
     </div>
-    <div data-add-to-cart-widget class="modal-body">
+    <div data-add-to-cart-widget class="modal-body" data-product>
       <!-- start of content -->
 		<div class="left-column">
-		<div class="big-product-image" style="background-image:url('{{ images[0] }}')"></div>
+		<div class="big-product-image" data-big-product-image style="background-image:url('{{ images[0] }}')"></div>
 		<div class="product-colors">
 			{% for color in colors %}	
-				<a href="{{ color.productURL }}"><span class="swatch-text">{{ color.colorName }}</span><span class="swatch-color" style="background-color:{{ color.colorValue }};background-image:url('{{ color.imageSwatchUrl }}')"></span></a>
+				<a href="{{ color.productURL }}" data-color data-productnumber="{{ color.productNumber }}"><span class="swatch-text">{{ color.colorName }}</span><span class="swatch-color" style="background-color:{{ color.colorValue }};background-image:url('{{ color.imageSwatchUrl }}')"></span></a>
 			{% endfor %}
 		</div>
 		</div>
 		<div class="right-column">
 		<div class="product-name">
-			<span>{{ productName }}</span>
+			<span data-product-name>{{ productName }}</span>
 		</div>
 		<div class="line-break"></div>
 		<div class="product-price">
 			{% if isSale %}
 				<span class="slash">${{ msrp.toFixed(2) }}</span>
 			{% endif %}
-			<span>${{ unitPrice.toFixed(2) }}</span>
+			<span data-product-price>${{ unitPrice.toFixed(2) }}</span>
 		</div>
 		<div class="select-pattern">
-			<select class="pattern-dropdown">
+			<select data-colors class="pattern-dropdown">
 			  	<option value="">Select Pattern</option>
 				{% for color in colors %}
 			  		<option value="{{ color.productNumber }}">{{ color.colorName }}</option>
 			  	{% endfor %}
-			</select>
+			</select>  <i class="fa fa-asterisk" data-required  style="display:none"></i>
 		</div>
 		<div class="select-size">
 			<select data-sizes class="size-dropdown">
@@ -38,15 +38,15 @@
 				{% for size in sizes %}
 			  		<option value="{{ size.sku }}">{{ size.sizeName }}</option>
 			  	{% endfor %}
-			</select>
+			</select>  <i class="fa fa-asterisk" data-required style="display:none"></i>
 		</div>
-		<div class="product-next">
-			<a id="product-decrement" href=""><span class="minus-product">-</span></a>
-			<a id="product-equal" href=""><span class="equal-product">1</span></a>
-			<a id="product-increment" href=""><span class="add-product">+</span></a>
+		<div class="product-next unselectable">
+			<a id="product-decrement" data-decrement><span class="minus-product">-</span></a>
+			<a id="product-equal"><span class="equal-product" data-quantity>1</span></a>
+			<a id="product-increment" data-increment><span class="add-product">+</span></a>
 		</div>
 		<div class="product-add-to-cart">
-			<a href=""><span class="click-add-to-cart">ADD TO CART</span></a>
+			<a href=""><span class="click-add-to-cart" data-add-to-cart>ADD TO CART</span></a>
 		</div>
 		<div class="product-code">
 			<span>Product Code: {{ productUID }}</span>
