--- a/public/css/pages/product.css
+++ b/public/css/pages/product.css
@@ -48,30 +48,17 @@
 	background-color:#ccc;
 	font-size:0;
 }
+.product-colors a span {
+	display:inline-block;
+	width:50px;
+	height:50px;
+}
 .swatch-text {
 	display:block;
 	font-size:14px;
 	color:black;
 	width:40px;
 	vertical-align:middle;
-}
-.swatch-color-first {
-	display:inline-block;
-	width:50px;
-	height:50px;
-	background-color:red;
-}
-.swatch-color-second {
-	display:inline-block;
-	width:50px;
-	height:50px;
-	background-color:blue;
-}
-.swatch-color-third {
-	display:inline-block;
-	width:50px;
-	height:50px;
-	background-color:yellow;
 }
 .product-name span {
 	font-size:24px;
