--- a/public/css/quickview.css
+++ b/public/css/quickview.css
@@ -40,15 +40,20 @@
 .quick-view-modal .product-colors {
 	position:relative;
 	display:block;
-	padding-left:68px;
+	padding-left:20px;
 	margin-top:20px;
 }
-.quick-view-modal .product-colors  a {
+.quick-view-modal .product-colors a {
 	display:inline-block;
 	margin-right:10px;
 	margin-bottom:10px;
 	background-color:#ccc;
 	overflow:hidden;
+	width:50px;
+	height:50px;
+}
+.quick-view-modal .product-colors a span {
+	display:inline-block;
 	width:50px;
 	height:50px;
 }
@@ -58,24 +63,6 @@
 	color:black;
 	width:40px;
 	vertical-align:middle;
-}
-.quick-view-modal .swatch-color-first {
-	display:inline-block;
-	width:50px;
-	height:50px;
-	background-color:red;
-}
-.quick-view-modal .swatch-color-second {
-	display:inline-block;
-	width:50px;
-	height:50px;
-	background-color:blue;
-}
-.quick-view-modal .swatch-color-third {
-	display:inline-block;
-	width:50px;
-	height:50px;
-	background-color:yellow;
 }
 .quick-view-modal .product-name span {
 	font-size:24px;
