--- a/views/product.html
+++ b/views/product.html
@@ -10,7 +10,7 @@
 		<div class="big-product-image" data-big-product-image style="background-image:url({{ product.images[0] }})"></div>
 		<div class="product-colors">
 			{% for color in product.colors %}	
-				<a href="{{ color.productURL }}" data-productnumber="{{ color.productNumber }}" data-color><span class="swatch-text">{{ color.colorName }}</span><span class="swatch-color" style="background-color:{{ color.colorValue }};background-image:url('{{ color.imageSwatchUrl }}')"></span></a>
+				<a href="{{ color.productURL }}" data-productnumber="{{ color.productNumber }}" data-color><span class="swatch-color" style="background-image:url('{{ color.images[6] }}')"></span></a>
 			{% endfor %}
 		</div>
 	</div>
