--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 				{% include "./partials/productColor.html" with productColor only %}
 			{% endfor %}
 		</div>
-		<a href="" class="productsbar"><i class="fa fa-th"></i> <span>SHOW MORE</span></a>
+		<a href="/catalog" class="productsbar"><i class="fa fa-th"></i> <span>SHOW MORE</span></a>
 	</div>
 {% endblock %}
 
