--- a/views/layout.html
+++ b/views/layout.html
@@ -30,7 +30,7 @@
 					<li><a href="/sign-in" rel="nofollow">sign in</a></li>
 				</ul>
 				<ul class="productsnav">
-					<li><a href="/">home</a></li>
+					<li><a href="/catalog">catalog</a></li>
 					<li><a href="/pjs-for-girls">pjs for girls</a></li>
 					<li><a href="/pjs-for-boys">pjs for boys</a></li>
 					<li><a href="/fuzzy-fleece">fuzzy fleece</a></li>
