--- a/public/css/main.css
+++ b/public/css/main.css
@@ -281,3 +281,99 @@ i.fa-asterisk {
 	font-size:15px;
 	color:#f00;
 }
+li span.sp-breadcrumb-label {
+	display:inline-block;
+	margin-left:3px;
+}
+.middle .product-container {
+	margin-top:20px;
+	margin-left:5px;
+	vertical-align:top;	
+	display:inline-block;
+	text-align:center;
+}
+.middle .product-container:hover .product {
+	background-color:#0098ce;
+}
+.middle .product-container .quick-view {
+	display:none;
+	position:absolute;
+	width:100%;
+	color:white;
+	background-color:#0098ce;
+	bottom:100px;
+}
+.middle .product-container:hover .quick-view {
+	display:block;
+}
+.middle .product-container .quick-view:hover {
+	color:yellow;
+}
+.middle .product {
+	display:inline-block;
+	color:#000;
+	border:1px solid #dad7d7;
+}
+.middle .product a {
+	position:relative;
+	display:block;
+	border:1px solid #dad7d7;
+	margin:4px;
+	width:166px;
+	height:260px;
+	font-size:13px;
+	background-color:#fff;
+	overflow:hidden;
+}
+.middle .product-container:hover .product a {
+	border:1px solid #0098ce;
+	width:166px;
+}
+.middle .product-container:hover .text-container {
+	background-color:#0098ce;
+}
+.middle .product img {
+	max-width:166px;
+	height:auto;
+	display:block;
+}
+.middle .product .productName {
+	color:#000;
+}
+.middle .price {
+	display:block;
+	text-align:center;
+	color:#000;
+}
+.middle .price .msrp { 
+	display:none; 
+}
+.middle .price .unit-price { 
+	display:inline-block; 
+}
+.middle .price .discount .msrp { 
+	display:inline-block; 
+	text-decoration:line-through; 
+}
+.middle .price .discount .unit-price { 
+	color:#f00;
+	margin-left:10px; 
+}
+.text-container {
+	display:inline-block;
+	text-align:center;
+	background-color:#ed292d;
+	padding:3px 5px;
+}
+.fa-shopping-cart {
+	color:#fff;
+	padding-right:5px;
+}
+.productsbar .icon-th {
+	position:relative;
+	top:6px;
+	right:5px;
+}
+.quick-view-modal {
+	display : none;
+}
