--- a/views/catalog.html
+++ b/views/catalog.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 	<div class="left-column-catalog">
-		<a href="" class="departments"><span>DEPARTMENTS</span></a>
+		<a class="departments"><span>DEPARTMENTS</span></a>
 		<ul class="nav-list">
 			<li><a href="/pjs-for-girls">GIRLS</a></li>
 			<li><a href="/pjs-for-boys">BOYS</a></li>
