--- a/views/layout.html
+++ b/views/layout.html
@@ -69,11 +69,11 @@
 					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
 					<a href="http://www.americanwidgeon.com" class="awlogo"></a>
 					<a href="http://www.candybean.com" class="pinklogo"></a>
-					<form action="subscribe.html" class="subscribebar">
+					<form action="subscribe.html" class="subscribebar newsletter">
 						<input type="text" name="subscribeemail" placeholder="add your email" class="subscribeemail"/> 
 						<button class="subscribetext"><span>subscribe</span></button>
 				    </form>
-					<div class="signup"><span>sign up for event and promotions</span></div>
+					<div class="signup newsletter"><span>sign up for event and promotions</span></div>
 				</div>
 			</div>
 		</div>
@@ -108,12 +108,12 @@
 	    		</div>
 			</div>
 		</div>
-		<div class="modal fade" data-cart-dialog role="dialog" tabindex="-1">
+		<div class="modal fade" data-cart-dialog data-global-dialog role="dialog" tabindex="-1">
 		  <div class="modal-dialog">
 		    <div class="modal-content">
 		      <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		        <h4 class="modal-title">Oops</h4>
+		        <h4 class="modal-title"></h4>
 		      </div>
 		      <div class="modal-body">
 		        <p></p>
