--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -23,6 +23,11 @@
 	  </div>
 	  <div class="form-group">
 	    <div class="col-sm-offset-2 col-sm-5">
+			<a href="/forgot-password" rel="nofollow,noindex">forgot password?</a>
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <div class="col-sm-offset-2 col-sm-5">
 			<div class="alert alert-danger" style="display:none"></div>
 			<button type="submit" class="btn btn-default">Sign in</button>
 	    </div>
