--- a/views/checkout.html
+++ b/views/checkout.html
@@ -506,5 +506,6 @@
 	<script src="/js/plugins/jquery.dumbfix.1.0.js"></script>
 	<script src="/js/plugins/jquery.dumbformstate.js"></script>
 	<script src="/js/plugins/jquery.dumbvalidation.js"></script>
+	<script src="//api.hubsoft.ws/js/validation-methods.js"></script>
 	<script src="/js/pages/checkout.js"></script>
 {% endblock %}
