--- a/views/layout.html
+++ b/views/layout.html
@@ -65,15 +65,21 @@
 						{% endblock %}
 					</div>
 				</div>
-				<div class="newsletterContainer">	
-					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
-					<a href="http://www.americanwidgeon.com" class="awlogo"></a>
-					<a href="http://www.candybean.com" class="pinklogo"></a>
-					<form action="subscribe.html" class="subscribebar newsletter">
-						<input type="text" name="subscribeemail" placeholder="add your email" class="subscribeemail"/> 
-						<button class="subscribetext"><span>subscribe</span></button>
+				<div class="newsletterContainer row">	
+					<div class="col-md-6">
+						<div class="move">
+							<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
+							<a href="http://www.americanwidgeon.com" class="awlogo"></a>
+							<a href="http://www.candybean.com" class="pinklogo"></a>
+						</div>
+					</div>
+					<form action="subscribe.html" class="col-md-6 subscribebar newsletter">
+						<div class="move moveRight">
+							<div class="signup newsletter"><span>sign up for event and promotions</span></div>
+							<input type="text" name="subscribeemail" placeholder="add your email" class="subscribeemail"/> 
+							<button class="subscribetext"><span>subscribe</span></button>
+						</div>
 				    </form>
-					<div class="signup newsletter"><span>sign up for event and promotions</span></div>
 				</div>
 			</div>
 		</div>
