--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -36,7 +36,11 @@
 			<select data-sizes class="size-dropdown">
 			  	<option value="">Select Size</option>
 				{% for size in sizes %}
-			  		<option value="{{ size.sku }}">{{ size.sizeName }}</option>
+					{% if size.inStockNow %}
+						<option value="{{ size.sku }}">{{ size.sizeName }}</option>
+					{% else %}
+						<option value="{{ size.sku }}" disabled>{{ size.sizeName }} (out of stock)</option>
+					{% endif %}
 			  	{% endfor %}
 			</select>  <i class="fa fa-asterisk" data-required style="display:none"></i>
 		</div>
